--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ st.caption("### Quick Links")
 time.sleep(SHORT)
 st.page_link("pages/resume.py", label='**Resume**', icon=':material/description:')
 time.sleep(SHORT)
-st.page_link("pages/project_1.py", label='**Projects**', icon=':material/construction:')
+st.page_link("pages/project_4.py", label='**Projects**', icon=':material/construction:')
 time.sleep(SHORT)
 st.page_link("pages/contact.py", label='**Contact**', icon=':material/call:')`,
 "pages/contact.py": `import streamlit as st
@@ -103,7 +103,10 @@ st.sidebar.caption("### :blue[Navigation]")
 st.sidebar.page_link('pages/home.py', label='**Home**')
 st.sidebar.page_link('pages/resume.py', label='**Resume**') #TODO
 st.sidebar.page_link('pages/contact.py', label='**Contact**') #TODO
-st.sidebar.caption("### :blue[Projects]")
+st.sidebar.caption("### :blue[Professional Projects]")
+st.sidebar.page_link('pages/project_4.py', label='**Project Green**')
+st.sidebar.page_link('pages/project_5.py', label='**Design Orchard**')
+st.sidebar.caption("### :blue[Personal Projects]")
 st.sidebar.page_link('pages/project_1.py', label='**X1C Riser**')
 st.sidebar.page_link('pages/project_2.py', label='**Tapo Camera**')
 st.sidebar.page_link('pages/project_3.py', label='**Spaghetti Detection**')
@@ -158,7 +161,7 @@ st.write("\\\\- ChenYi")
 st.write("### ")
 st.caption("### Quick Links")
 st.page_link("pages/resume.py", label='**Resume**', icon=':material/description:')
-st.page_link("pages/project_1.py", label='**Projects**', icon=':material/construction:')
+st.page_link("pages/project_4.py", label='**Projects**', icon=':material/construction:')
 st.page_link("pages/contact.py", label='**Contact**', icon=':material/call:')`,
 "pages/resume.py": `import streamlit as st
 
@@ -170,7 +173,10 @@ st.sidebar.caption("### :blue[Navigation]")
 st.sidebar.page_link('pages/home.py', label='**Home**')
 st.sidebar.page_link('pages/resume.py', label='**Resume**') #TODO
 st.sidebar.page_link('pages/contact.py', label='**Contact**') #TODO
-st.sidebar.caption("### :blue[Projects]")
+st.sidebar.caption("### :blue[Professional Projects]")
+st.sidebar.page_link('pages/project_4.py', label='**Project Green**')
+st.sidebar.page_link('pages/project_5.py', label='**Design Orchard**')
+st.sidebar.caption("### :blue[Personal Projects]")
 st.sidebar.page_link('pages/project_1.py', label='**X1C Riser**')
 st.sidebar.page_link('pages/project_2.py', label='**Tapo Camera**')
 st.sidebar.page_link('pages/project_3.py', label='**Spaghetti Detection**')
@@ -305,7 +311,10 @@ st.sidebar.caption("### :blue[Navigation]")
 st.sidebar.page_link('pages/home.py', label='**Home**')
 st.sidebar.page_link('pages/resume.py', label='**Resume**') #TODO
 st.sidebar.page_link('pages/contact.py', label='**Contact**') #TODO
-st.sidebar.caption("### :blue[Projects]")
+st.sidebar.caption("### :blue[Professional Projects]")
+st.sidebar.page_link('pages/project_4.py', label='**Project Green**')
+st.sidebar.page_link('pages/project_5.py', label='**Design Orchard**')
+st.sidebar.caption("### :blue[Personal Projects]")
 st.sidebar.page_link('pages/project_1.py', label='**X1C Riser**')
 st.sidebar.page_link('pages/project_2.py', label='**Tapo Camera**')
 st.sidebar.page_link('pages/project_3.py', label='**Spaghetti Detection**')
@@ -368,7 +377,10 @@ st.sidebar.caption("### :blue[Navigation]")
 st.sidebar.page_link('pages/home.py', label='**Home**')
 st.sidebar.page_link('pages/resume.py', label='**Resume**') #TODO
 st.sidebar.page_link('pages/contact.py', label='**Contact**') #TODO
-st.sidebar.caption("### :blue[Projects]")
+st.sidebar.caption("### :blue[Professional Projects]")
+st.sidebar.page_link('pages/project_4.py', label='**Project Green**')
+st.sidebar.page_link('pages/project_5.py', label='**Design Orchard**')
+st.sidebar.caption("### :blue[Personal Projects]")
 st.sidebar.page_link('pages/project_1.py', label='**X1C Riser**')
 st.sidebar.page_link('pages/project_2.py', label='**Tapo Camera**')
 st.sidebar.page_link('pages/project_3.py', label='**Spaghetti Detection**')
@@ -427,7 +439,10 @@ st.sidebar.caption("### :blue[Navigation]")
 st.sidebar.page_link('pages/home.py', label='**Home**')
 st.sidebar.page_link('pages/resume.py', label='**Resume**') #TODO
 st.sidebar.page_link('pages/contact.py', label='**Contact**') #TODO
-st.sidebar.caption("### :blue[Projects]")
+st.sidebar.caption("### :blue[Professional Projects]")
+st.sidebar.page_link('pages/project_4.py', label='**Project Green**')
+st.sidebar.page_link('pages/project_5.py', label='**Design Orchard**')
+st.sidebar.caption("### :blue[Personal Projects]")
 st.sidebar.page_link('pages/project_1.py', label='**X1C Riser**')
 st.sidebar.page_link('pages/project_2.py', label='**Tapo Camera**')
 st.sidebar.page_link('pages/project_3.py', label='**Spaghetti Detection**')
