--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     <title>stlite app</title>
     <link
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/@stlite/mountable@0.69.2/build/stlite.css"
+      href="https://cdn.jsdelivr.net/npm/@stlite/mountable@0.70.0/build/stlite.css"
     />
   </head>
   <body>
     <div id="root"></div>
-    <script src="https://cdn.jsdelivr.net/npm/@stlite/mountable@0.69.2/build/stlite.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@stlite/mountable@0.70.0/build/stlite.js"></script>
     <script>
 stlite.mount(
   {
@@ -198,7 +198,7 @@ with st.container(border=True):
     st.markdown("Responsible for all aspects of electronics design and integration with new or exsisting products.")
     st.markdown("""
                 - Develop electronics based solution for a myriad of simple to complex operational challenges.
-                - Identify and source for required electronics components such as micro-controllers and sensors.
+                - Identify and source for required electronic components such as micro-controllers and sensors.
                 - Fabricate solutions, using methods such as CAD, additive manufacturing, laser cutting and PCB design.
                 - Assist in ad-hoc software related tasks, including writing of automation scripts and data analysis.
                 - Fast time-to-market directly secured several contracts otherwise lost.
@@ -607,5 +607,5 @@ tab2.image("https://raw.githubusercontent.com/ChuaChenYi/chuachenyi.github.io/re
 
     </script>
   </body>
-  <!-- Generated from stlite sharing (https://edit.share.stlite.net/), and the source version is 0b3f267516d5b54620fac2800e85418958686e01 -->
+  <!-- Generated from stlite sharing (https://edit.share.stlite.net/), and the source version is af558a8007f4763bd25195aaa0320bc300e033e9 -->
 </html>
